tests/invalid/cyclic_bring2.w
bring "./cyclic_bring3.w" as foo;
